# dormer

./: .gitignore  Makefile  README.md  casement.py  pyproject.toml  requirements.in  requirements.txt  test_casement.py  test_dormer.py
.github/workflows/: ci.yml
casement/: __init__.py
dormer/: __init__.py
tests/: test_dormer.py  xrandr.test_output
